# k4

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  k2  usr-local-k2c.mount
docs/: k2-documentation.md
examples/: arithmetic.k2  basic.k2  benchmark.k2  fibonacci.k2  timing.k2
k4/: .gitignore  Cargo.toml  README.md
k4/examples/: ai_example.k4  distributed_example.k4  hello_world.k4  quantum_example.k4
k4/src/: lib.rs  main.rs
k4/src/ai_integration/: mod.rs
k4/src/ast/: mod.rs
k4/src/lexer/: mod.rs
k4/src/quantum/: mod.rs
scripts/: build.sh  build_deb.sh  docker_run.sh  install.sh  push_to_github.sh  run_tests.sh
src/: k2.cpp
tests/: arithmetic.k2  basic.k2  complex.k2
